fix: harden admin auth and rag cache behavior
- Fix VideoControllerApiFlowTest: match 4-param saveVideo() mock signature
- Add admin role check to /api/admin/knowledge/reindex (403 for non-admin)
- Write ROLE_USER/ROLE_ADMIN authorities in JwtAuthFilter from DB user role
- Fix RagQaService rewrite cache: actually reuse cached rewritten query
- Improve retrieval cache key: include focusVideo ID and issues hash